remove MC password migration code

We are shipping this since a bunch of releases so all passwords should be
migrated since a while.
Furthemore, it may cause issues when the password has been updated in Empathy
but not MC.

https://bugzilla.gnome.org/show_bug.cgi?id=677180